# project_simplified_chat

./: .gitignore  docker-compose.yml
config/: loki.yml  otel-collector.yml  prometheus.yml  tempo.yaml
storage_service/: Dockerfile  pyproject.toml
storage_service/src/: config.py  main.py
storage_service/src/application/: message_service.py  models.py  storage_processor.py
storage_service/src/infrastructure/: kafka.py  message_repository.py  otel.py
storage_service/src/routers/: message.py
storage_service/tests/unit/application/: test_message_service.py  test_storage_processor.py
tests/: json_test.py  pubsub_test.py  test_client.html  test_client3.html
websocket_service/: .coverage  Dockerfile  pyproject.toml
websocket_service/src/: config.py  main.py
websocket_service/src/application/: batch_publisher.py  broadcaster.py  chat_service.py  connection_manager.py  exceptions.py
websocket_service/src/common/: websocket_close_code.py
websocket_service/src/domain/: chat_message.py
websocket_service/src/infrastructure/: kafka.py  otel.py  redis.py
websocket_service/src/routers/: websocket.py
websocket_service/tests/: conftest.py
websocket_service/tests/integration/: conftest.py
websocket_service/tests/unit/: conftest.py
websocket_service/tests/unit/application/: test_batch_publisher.py  test_broadcaster.py  test_chat_service.py  test_connection_manager.py
websocket_service/tests/unit/domain/: test_chat_message.py
